--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sell",
-  "version": "1.0.0",
+  "name": "meituan",
+  "version": "2.0.0",
   "description": "A Vue.js project",
   "author": "",
   "private": true,
